--- a/notonthelist/css/website.css
+++ b/notonthelist/css/website.css
@@ -9,7 +9,7 @@ color: azure;
    height: 100%;
   width: 100%;
   display: flex;
-  position: fixed;
+  position: relative;
   align-items: center;
   justify-content: center;
 }
