--- a/notonthelist/css/website.css
+++ b/notonthelist/css/website.css
@@ -5,7 +5,7 @@ body {
 #demo {
 font-family: 'Quicksand', sans-serif;
     font-size: 60px;
-color: azure;
+color: orange;
    height: 100%;
   width: 100%;
   display: flex;
